internal/xds/translator/testdata/out/xds-ir/http-route.routes.yaml
- name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        - name: test
          stringMatch:
            suffix: end
        prefix: /
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      route:
        cluster: first-route
